# fast_api

./: .editorconfig  .pdm.toml  README.md  docker-compose.yml  main.py  pyproject.toml
certificates/: localhost+2-key.pem  localhost+2.pem
sql_app/: crud.py  database.py  models.py  schemas.py
src/: main.py
