[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "mypy>=1.1.1",
]
format = [
    "black>=23.3.0",
    
]

[tool.pdm.scripts]
start = "flask run -p 8000"
lint_bandit = "bandit -r"
lint_flake8 = "flake8"
format_black = "black"
format_isort = "isort"
lint = {composite = ["lint_bandit", "lint_flake8"]}
format = {composite = ["format_isort", "format_black"]}



[tool.isort]
profile = "black"

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi>=0.95.0",
    "requests>=2.28.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
