[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "mypy>=1.1.1",
]
format = [
    "black>=23.3.0",
    
]


[tool.pdm.scripts]
start = "flask run -p 8000"

lint_bandit = "bandit -r"
lint_flake8 = "flake8"

format_black = "black"
format_isort = "isort"

lint = {composite = ["lint_bandit", "lint_flake8"]}
format = {composite = ["format_isort", "format_black"]}


[tool.isort]
profile = "black"


[project]
name = "fast_api"
version = "0.1.0"
description = ""
authors = [
    {name = "htduyen", email = "thanhduyeny1@gmail.com"},
]
dependencies = [
    "unicorn>=2.0.1.post1",
    "fastapi>=0.95.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
